Apps/speedtest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 192.168.1.65
          - 8.8.8.8
        searches:
          - speedtest-tracker.svc.cluster.local
        options:
          - name: ndots
            value: "5"
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker
      volumes:
        - name: speedtest-tracker
          persistentVolumeClaim:
            claimName: speedtest-tracker
